--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>LUX SPIRIA</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LUX SPIRIA | Yuu Honda</title>
 </head>
-<body>
-  <h1>LUX SPIRIA</h1>
-  <p>Soul Architecture and Identity Framework by Yuu Honda</p>
-  <img src="luxspiria_logo.png" alt="LUX SPIRIA ロゴ" width="300">
+<body style="text-align:center; padding: 2rem;">
+  <h1>Welcome to LUX SPIRIA</h1>
+  <p>This is the access portal for Yuu Honda.</p>
+  <img src="luxspiria_logo.png" alt="LUX SPIRIA Logo" width="300" />
+  <p>More content will be added soon.</p>
 </body>
 </html>
