--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="text-align:center; padding: 2rem;">
   <h1>Welcome to LUX SPIRIA</h1>
   <p>This is the access portal for Yuu Honda.</p>
-  <img src="luxspiria_logo.png" alt="LUX SPIRIA Logo" width="300" />
+  <img src="be0a81204e36d9b48427ed4f81ef96accf2946f739a2e9e8284fd3d3f8510c49.jpeg" />
   <p>More content will be added soon.</p>
 </body>
 </html>
