--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LUX SPIRIA | Yuu Honda</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #0e0e0e;
+      color: #f0f0f0;
+      text-align: center;
+      padding: 40px;
+    }
+    img {
+      max-width: 300px;
+      height: auto;
+      margin-bottom: 20px;
+    }
+    h1 {
+      font-size: 2em;
+      margin-bottom: 0.3em;
+    }
+    p {
+      font-size: 1.1em;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+  </style>
 </head>
-<body style="text-align:center; padding: 2rem;">
-  <h1>Welcome to LUX SPIRIA</h1>
-  <p>This is the access portal for Yuu Honda.</p>
-  <img src="be0a81204e36d9b48427ed4f81ef96accf2946f739a2e9e8284fd3d3f8510c49.jpeg" />
-  <p>More content will be added soon.</p>
+<body>
+  <img src="luxspiria_logo.png" alt="LUX SPIRIA Logo" />
+  <h1>LUX SPIRIA</h1>
+  <p>Soul Architecture and Identity Framework by Yuu Honda</p>
 </body>
 </html>
