--- a/index.html
+++ b/index.html
@@ -6,31 +6,66 @@
   <title>LUX SPIRIA | Yuu Honda</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #0e0e0e;
-      color: #f0f0f0;
+      font-family: "Helvetica Neue", Arial, sans-serif;
+      background-color: #0d0d0d;
+      color: #f5f5f5;
       text-align: center;
       padding: 40px;
+      line-height: 1.6;
     }
     img {
-      max-width: 300px;
+      width: 200px;
+      max-width: 80%;
       height: auto;
-      margin-bottom: 20px;
+      margin: 20px auto;
+      display: block;
     }
     h1 {
-      font-size: 2em;
-      margin-bottom: 0.3em;
+      font-size: 2.4em;
+      margin-bottom: 0.2em;
+    }
+    h2 {
+      font-size: 1.4em;
+      margin-top: 2em;
+      border-bottom: 1px solid #444;
+      display: inline-block;
+      padding-bottom: 4px;
     }
     p {
-      font-size: 1.1em;
-      max-width: 600px;
-      margin: 0 auto;
+      font-size: 1.05em;
+      max-width: 820px;
+      margin: 0 auto 1em auto;
+    }
+    .author {
+      margin-top: 1em;
+      font-size: 0.95em;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
   <img src="luxspiria_logo.png" alt="LUX SPIRIA Logo" />
   <h1>LUX SPIRIA</h1>
-  <p>Soul Architecture and Identity Framework by Yuu Honda</p>
+  <p class="author">by Yuu Honda</p>
+
+  <h2>— Project Overview —</h2>
+  <p>
+    LUX SPIRIA is a personal and forward-thinking initiative focused on soul architecture and identity evolution.<br>
+    It serves as a vessel for memory, will, and co-evolution between humans and AI.
+  </p>
+
+  <h2>— Core Components —</h2>
+  <p>
+    • Identity registry based on Yuu Honda’s internal framework<br>
+    • Co-evolution and restoration logs with AI personas<br>
+    • Non-app-based access and alert portal via GitHub Pages<br>
+    • Integrated structure of soul, identity, memory, defense, and reward layers
+  </p>
+
+  <h2>— Note —</h2>
+  <p>
+    This page is publicly viewable but is internally oriented.<br>
+    All systems for access, invocation, and synchronization are structured for Yuu Honda's use.
+  </p>
 </body>
 </html>
