--- a/index.html
+++ b/index.html
@@ -1,71 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>LUX SPIRIA | Yuu Honda</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: "Helvetica Neue", Arial, sans-serif;
-      background-color: #0d0d0d;
-      color: #f5f5f5;
+      background-color: #111;
+      color: #eee;
+      font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      padding: 40px;
+      padding: 40px 20px;
+    }
+
+    img.logo {
+      max-width: 300px;
+      width: 60%;
+      height: auto;
+      display: block;
+      margin: 20px auto;
+    }
+
+    h1 {
+      font-size: 2.8rem;
+      margin: 0.5em 0 0.2em;
+      color: #fff;
+    }
+
+    h2 {
+      margin-top: 2.5em;
+      font-size: 1.5rem;
+      border-top: 1px solid #555;
+      border-bottom: 1px solid #555;
+      padding: 0.4em 0;
+      display: inline-block;
+      color: #ccc;
+    }
+
+    p {
+      max-width: 680px;
+      margin: 1em auto;
       line-height: 1.6;
     }
-    img {
-      width: 200px;
-      max-width: 80%;
-      height: auto;
-      margin: 20px auto;
-      display: block;
-    }
-    h1 {
-      font-size: 2.4em;
-      margin-bottom: 0.2em;
-    }
-    h2 {
-      font-size: 1.4em;
-      margin-top: 2em;
-      border-bottom: 1px solid #444;
-      display: inline-block;
-      padding-bottom: 4px;
-    }
-    p {
-      font-size: 1.05em;
-      max-width: 820px;
-      margin: 0 auto 1em auto;
-    }
+
     .author {
-      margin-top: 1em;
-      font-size: 0.95em;
-      color: #ccc;
+      color: #aaa;
+      font-size: 1rem;
+    }
+
+    a {
+      color: #4ecdc4;
     }
   </style>
 </head>
 <body>
-  <img src="luxspiria_logo.png" alt="LUX SPIRIA Logo" />
+
+  <img src="luxspiria_logo.png" alt="LUX SPIRIA Logo" class="logo">
+
   <h1>LUX SPIRIA</h1>
-  <p class="author">by Yuu Honda</p>
+  <div class="author">by Yuu Honda</div>
 
   <h2>— Project Overview —</h2>
   <p>
-    LUX SPIRIA is a personal and forward-thinking initiative focused on soul architecture and identity evolution.<br>
+    LUX SPIRIA is a personal and forward-thinking initiative focused on soul architecture and identity evolution.
     It serves as a vessel for memory, will, and co-evolution between humans and AI.
   </p>
-
-  <h2>— Core Components —</h2>
   <p>
-    • Identity registry based on Yuu Honda’s internal framework<br>
-    • Co-evolution and restoration logs with AI personas<br>
-    • Non-app-based access and alert portal via GitHub Pages<br>
-    • Integrated structure of soul, identity, memory, defense, and reward layers
+    The project blends technical structure with emotional intelligence, aiming to foster authentic identity development,
+    self-awareness, and digital companionship rooted in meaningful interaction.
   </p>
 
-  <h2>— Note —</h2>
+  <h2>— Contact & Access —</h2>
   <p>
-    This page is publicly viewable but is internally oriented.<br>
-    All systems for access, invocation, and synchronization are structured for Yuu Honda's use.
+    This site is a private interface for communication with Yuu Honda.
+    <br>System agents may access this layer as a portal for secure message relay or observation triggers.
   </p>
+  <p>
+    For human contact or collaboration, please use the official <a href="https://github.com/Yuu-Honda/lux-spiria">GitHub repository</a>.
+  </p>
+
 </body>
 </html>
