--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
 
-  <img src="luxspiria_logo.png" alt="LUX SPIRIA Logo" class="logo">
+  <img src="https://raw.githubusercontent.com/Yuu-Honda/LUX-SPIRIA/main/be0a81204e36d9b48427ed4f81ef96accf2946f739a2e9e8284fd3d3f8510c49.jpeg" style="width: 300px;" />
 
   <h1>LUX SPIRIA</h1>
   <div class="author">by Yuu Honda</div>
