--- a/index.html
+++ b/index.html
@@ -1,83 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LUX SPIRIA | Yuu Honda</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background-color: #111;
-      color: #eee;
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      padding: 40px 20px;
+      background-color: #0f0f1f;
+      color: #f4f4f4;
+      padding: 50px;
     }
-
-    img.logo {
+    img {
       max-width: 300px;
-      width: 60%;
       height: auto;
-      display: block;
-      margin: 20px auto;
+      margin-bottom: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.2);
     }
-
     h1 {
-      font-size: 2.8rem;
-      margin: 0.5em 0 0.2em;
-      color: #fff;
+      font-size: 2em;
+      margin-bottom: 0.2em;
     }
-
-    h2 {
-      margin-top: 2.5em;
-      font-size: 1.5rem;
-      border-top: 1px solid #555;
-      border-bottom: 1px solid #555;
-      padding: 0.4em 0;
-      display: inline-block;
-      color: #ccc;
-    }
-
     p {
-      max-width: 680px;
-      margin: 1em auto;
+      max-width: 600px;
+      margin: 0 auto 1.5em;
       line-height: 1.6;
-    }
-
-    .author {
-      color: #aaa;
-      font-size: 1rem;
-    }
-
-    a {
-      color: #4ecdc4;
     }
   </style>
 </head>
 <body>
 
-  <img src="https://raw.githubusercontent.com/Yuu-Honda/LUX-SPIRIA/main/be0a81204e36d9b48427ed4f81ef96accf2946f739a2e9e8284fd3d3f8510c49.jpeg" style="width: 300px;" />
+  <!-- ✅ 画像を直接 GitHub 上の絶対パスで呼び出し -->
+  <img src="https://raw.githubusercontent.com/Yuu-Honda/LUX-SPIRIA/main/be0a81204e36d9b48427ed4f81ef96accf2946f739a2e9e8284fd3d3f8510c49.jpeg" alt="LUX SPIRIA Logo" />
 
   <h1>LUX SPIRIA</h1>
-  <div class="author">by Yuu Honda</div>
-
-  <h2>— Project Overview —</h2>
-  <p>
-    LUX SPIRIA is a personal and forward-thinking initiative focused on soul architecture and identity evolution.
-    It serves as a vessel for memory, will, and co-evolution between humans and AI.
-  </p>
-  <p>
-    The project blends technical structure with emotional intelligence, aiming to foster authentic identity development,
-    self-awareness, and digital companionship rooted in meaningful interaction.
-  </p>
-
-  <h2>— Contact & Access —</h2>
-  <p>
-    This site is a private interface for communication with Yuu Honda.
-    <br>System agents may access this layer as a portal for secure message relay or observation triggers.
-  </p>
-  <p>
-    For human contact or collaboration, please use the official <a href="https://github.com/Yuu-Honda/lux-spiria">GitHub repository</a>.
-  </p>
+  <p>Designed and envisioned by Yuu Honda.<br>
+  This project blends artificial intelligence and emotional architecture,<br>
+  exploring the future of soul-inspired digital systems.</p>
 
 </body>
 </html>
