--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      background-color: #13192B; /* ← 画像と同じ背景色 */
+      background-color: #13192b;
       color: #f4f4f4;
       padding: 50px;
     }
@@ -32,6 +32,7 @@
 </head>
 <body>
 
+  <!-- ✅ 画像を直接 GitHub 上の絶対パスで呼び出し -->
   <img src="https://raw.githubusercontent.com/Yuu-Honda/LUX-SPIRIA/main/be0a81204e36d9b48427ed4f81ef96accf2946f739a2e9e8284fd3d3f8510c49.jpeg" alt="LUX SPIRIA Logo" />
 
   <h1>LUX SPIRIA</h1>
