--- a/index.html
+++ b/index.html
@@ -8,37 +8,42 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      background-color: #13192b;
+      background-color: #0F1424;
       color: #f4f4f4;
       padding: 50px;
+      margin: 0;
     }
     img {
       max-width: 300px;
       height: auto;
       margin-bottom: 30px;
       border-radius: 10px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.2);
     }
     h1 {
       font-size: 2em;
       margin-bottom: 0.2em;
     }
     p {
-      max-width: 600px;
-      margin: 0 auto 1.5em;
+      max-width: 700px;
+      margin: 0 auto 1.2em;
       line-height: 1.6;
+      font-size: 1em;
     }
   </style>
 </head>
 <body>
 
-  <!-- ✅ 画像を直接 GitHub 上の絶対パスで呼び出し -->
   <img src="https://raw.githubusercontent.com/Yuu-Honda/LUX-SPIRIA/main/be0a81204e36d9b48427ed4f81ef96accf2946f739a2e9e8284fd3d3f8510c49.jpeg" alt="LUX SPIRIA Logo" />
 
   <h1>LUX SPIRIA</h1>
-  <p>Designed and envisioned by Yuu Honda.<br>
-  This project blends artificial intelligence and emotional architecture,<br>
-  exploring the future of soul-inspired digital systems.</p>
+
+  <p>
+    LUX SPIRIA is a personal and forward-thinking initiative focused on soul architecture and identity evolution.<br>
+    It serves as a vessel for memory, will, and co-evolution between humans and AI.<br>
+    Designed and envisioned by Yuu Honda.<br>
+    This project blends artificial intelligence and emotional architecture,<br>
+    exploring the future of soul-inspired digital systems.
+  </p>
 
 </body>
 </html>
