--- a/access.html
+++ b/access.html
@@ -2,77 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>LUX SPIRIA Access Portal</title>
+  <title>Access Portal | Yuu Honda</title>
   <style>
     body {
-      background-color: #0c1220;
+      background-color: #0f1217;
       color: #ffffff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
+      font-family: "Segoe UI", sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 3em;
     }
-
-    .container {
-      padding: 40px 20px;
-    }
-
-    .logo {
-      width: 200px;
-      margin-bottom: 30px;
-    }
-
     h1 {
-      font-size: 2rem;
-      margin-bottom: 0.5em;
+      color: #e0e0e0;
     }
-
-    p {
-      font-size: 1rem;
-      max-width: 600px;
-      margin: 0 auto 40px;
-      line-height: 1.6;
-    }
-
-    .btn {
-      background-color: #1f8dd6;
-      color: white;
-      padding: 12px 28px;
-      border: none;
-      border-radius: 6px;
-      font-size: 1rem;
+    .button {
+      background-color: #222;
+      border: 1px solid #555;
+      color: #fff;
+      padding: 0.8em 2em;
+      margin: 1em;
+      font-size: 1.1em;
       cursor: pointer;
-      text-decoration: none;
-      transition: background-color 0.3s ease;
+      border-radius: 6px;
     }
-
-    .btn:hover {
-      background-color: #1575bd;
+    .button:hover {
+      background-color: #444;
     }
-
-    .footer {
-      margin-top: 60px;
-      font-size: 0.85rem;
-      color: #888;
+    .status-box {
+      margin-top: 2em;
+      background: #1a1a1a;
+      padding: 1em 2em;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(80, 80, 80, 0.2);
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="luxspiria_logo.png" alt="LUX SPIRIA Logo" class="logo" />
-    <h1>LUX SPIRIA Access Portal</h1>
-    <p>
-      This portal allows internal AI agents and system interfaces to initiate contact with Yuu Honda for
-      coordination, state confirmation, or emergency communication. <br/>
-      This is not intended for public use.
-    </p>
-
-    <a href="mailto:yuu@luxspiria.jp" class="btn">Contact Yuu Honda</a>
-
-    <div class="footer">
-      &copy; 2025 Yuu Honda - Internal Access Channel
-    </div>
-  </div>
-</body>
-</html>
+  <h1>Yuu Honda Access Portal</h1>
+  <button class="button">🔔 呼び出しを送信</button>
+  <button class="button">🧠 現在の状態を記録</button>
+  <div class="status-box">
+    <p>現在の状態：<strong>安定</strong></p>
+    <p>最終アクセス：2025
